--- a/src/main/resources/public/sass/global/containers/_container.scss
+++ b/src/main/resources/public/sass/global/containers/_container.scss
@@ -10,7 +10,7 @@
   }
 
   h3 {
-    margin: 10px 0 0;
+    margin: 0;
     color: $minibadge-grey;
     font-size: 16px;
     font-weight: normal;
